--- a/baseApp/build.gradle
+++ b/baseApp/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     //Share pref
-    compile "com.orhanobut:hawk:2.0.1"
+    implementation "com.orhanobut:hawk:2.0.1"
     // Dependency Injection framework
     implementation 'com.google.dagger:dagger-android:2.17'
     implementation 'com.google.dagger:dagger-android-support:2.17'
