--- a/baseApp/build.gradle
+++ b/baseApp/build.gradle
@@ -78,6 +78,8 @@ dependencies {
     implementation "com.orhanobut:hawk:2.0.1"
     implementation 'com.github.antonKozyriatskyi:CircularProgressIndicator:1.2.2'
 
+    implementation 'com.github.jakob-grabner:Circle-Progress-View:1.4'
+
 
     //Timeout
     implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
