--- a/baseApp/src/main/AndroidManifest.xml
+++ b/baseApp/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
 
     <application
@@ -40,13 +40,14 @@
         </receiver>
 
 
-        <activity android:name="com.motor.connect.feature.data.MainActivity"/>
+        <activity android:name="com.motor.connect.feature.data.MainActivity" />
         <activity android:name="com.motor.connect.feature.plan.CreatePlanActivity" />
         <activity android:name="com.motor.connect.feature.setting.SettingActivity" />
         <activity android:name="com.motor.connect.feature.notification.NotificationActivity" />
         <activity android:name="com.motor.connect.feature.add.AddAreaActivity" />
+        <activity android:name="com.motor.connect.feature.details.AreaDetailActivity" />
 
-        <activity android:name="com.motor.connect.feature.home.HomeActivity"/>
+        <activity android:name="com.motor.connect.feature.home.HomeActivity" />
 
 
     </application>
