--- a/baseApp/src/main/AndroidManifest.xml
+++ b/baseApp/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
 
         <activity android:name="com.motor.connect.feature.setting.schedule.SettingScheduleActivity"/>
         <activity android:name="com.motor.connect.feature.setting.area.SettingAreaScheduleActivity"/>
+        <activity android:name="com.motor.connect.feature.setting.van.SettingAreaVanActivity"/>
 
         <activity android:name="com.motor.connect.feature.home.HomeActivity" />
 
