- Edit info area - Implement send sms

--- a/baseApp/src/main/AndroidManifest.xml
+++ b/baseApp/src/main/AndroidManifest.xml
@@ -51,6 +51,8 @@
         <activity android:name="com.motor.connect.feature.setting.area.SettingAreaScheduleActivity"/>
         <activity android:name="com.motor.connect.feature.setting.van.SettingAreaVanActivity"/>
 
+        <activity android:name="com.motor.connect.feature.edit.EditAreaActivity"/>
+
         <activity android:name="com.motor.connect.feature.home.HomeActivity" />
 
 
