--- a/baseApp/src/main/AndroidManifest.xml
+++ b/baseApp/src/main/AndroidManifest.xml
@@ -39,21 +39,19 @@
             </intent-filter>
         </receiver>
 
-
-        <activity android:name="com.motor.connect.feature.data.MainActivity" />
-        <activity android:name="com.motor.connect.feature.plan.CreatePlanActivity" />
+        <activity android:name="com.motor.connect.feature.main.MainActivity" />
         <activity android:name="com.motor.connect.feature.setting.SettingActivity" />
         <activity android:name="com.motor.connect.feature.notification.NotificationActivity" />
         <activity android:name="com.motor.connect.feature.add.AddAreaActivity" />
         <activity android:name="com.motor.connect.feature.details.AreaDetailActivity" />
+        <activity android:name="com.motor.connect.feature.setting.schedule.SettingScheduleActivity" />
+        <activity android:name="com.motor.connect.feature.setting.area.SettingAreaScheduleActivity" />
+        <activity android:name="com.motor.connect.feature.setting.van.SettingAreaVanActivity" />
+        <activity android:name="com.motor.connect.feature.edit.EditAreaActivity" />
+        <activity android:name="com.motor.connect.utils.dialog.DialogActivity" />
+        <activity android:name="com.motor.connect.feature.setting.howuse.HowToUseActivity" />
 
-        <activity android:name="com.motor.connect.feature.setting.schedule.SettingScheduleActivity"/>
-        <activity android:name="com.motor.connect.feature.setting.area.SettingAreaScheduleActivity"/>
-        <activity android:name="com.motor.connect.feature.setting.van.SettingAreaVanActivity"/>
-
-        <activity android:name="com.motor.connect.feature.edit.EditAreaActivity"/>
-
-        <activity android:name="com.motor.connect.feature.home.HomeActivity" />
+        <activity android:name="com.motor.connect.feature.demo.DemoActivity" />
 
 
     </application>
