--- a/baseApp/build.gradle
+++ b/baseApp/build.gradle
@@ -77,8 +77,9 @@ dependencies {
     //Share pref
     implementation "com.orhanobut:hawk:2.0.1"
     implementation 'com.github.antonKozyriatskyi:CircularProgressIndicator:1.2.2'
-
     implementation 'com.github.jakob-grabner:Circle-Progress-View:1.4'
+    implementation 'com.github.code-crusher:EasyWeather:v1.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 
     //Timeout
