--- a/baseApp/src/main/AndroidManifest.xml
+++ b/baseApp/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.feature.area">
+    package="com.motor.connect">
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -14,14 +14,6 @@
     <uses-permission android:name="android.permission.WRITE_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-
-    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
-    <uses-permission android:name="android.permission.ANSWER_PHONE_CALLS" />
-    <uses-permission android:name="android.permission.ANSWER_PHONE_CALLS" />
-
 
     <application
         android:name="com.motor.connect.base.app.BaseApplication"
@@ -60,7 +52,6 @@
         <activity android:name="com.motor.connect.feature.add.AddAreaActivity" />
         <activity android:name="com.motor.connect.feature.details.AreaDetailActivity" />
         <activity android:name="com.motor.connect.feature.setting.schedule.SettingScheduleActivity" />
-        <activity android:name="com.motor.connect.feature.setting.area.SettingAreaScheduleActivity" />
         <activity android:name="com.motor.connect.feature.setting.van.SettingAreaVanActivity" />
         <activity android:name="com.motor.connect.feature.setting.control.SettingControlActivity" />
         <activity android:name="com.motor.connect.feature.edit.EditAreaActivity" />
