--- a/baseApp/src/main/AndroidManifest.xml
+++ b/baseApp/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
         <activity android:name="com.motor.connect.feature.setting.schedule.SettingScheduleActivity" />
         <activity android:name="com.motor.connect.feature.setting.van.SettingAreaVanActivity" />
         <activity android:name="com.motor.connect.feature.setting.control.SettingControlActivity" />
+        <activity android:name="com.motor.connect.feature.setting.agenda.SettingAgendaActivity" />
         <activity android:name="com.motor.connect.feature.edit.EditAreaActivity" />
         <activity android:name="com.motor.connect.utils.dialog.DialogActivity" />
         <activity android:name="com.motor.connect.feature.setting.howuse.HowToUseActivity" />
